                                      MPlayer Core CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 22-08-2005 updated: libvorbis interface to mplayer cvs (ad_libvorbis.c:1.18), fixes vorbis decoding in both matroska and ogm containers
  - 22-08-2005 updated: matroska demuxer to mplayerhq cvs (demux_mkv.c:1.45)
  - 17-08-2005 fixed: mplayer would crash if no video decoder was found for a media that did contain video, instead of just playing the audio
  - 16-08-2005 added: display progress when parsing vobsubs
  - 12-08-2005 fixed: when resuming normal playback speed, video would jump ahead a couple of seconds
  - 12-08-2005 changed: detection of interlaced material somewhat improved
  - 12-08-2005 changed: made rewind search for the right time pos after a seek by dropping frames after seek untill at righ position
  - 07-08-2005 updated codec.conf [ 1252569 ]
  - 06-08-2005 fixed: OGG files often crashed on exit or failed on open. Updated demux_ogg from mplayerhq cvs.
  - 25-06-2005 added: better way to detect if an mpeg sequence is progressive or not
  - 25-06-2005 fixed: made sure mplayer begins with uniting the caching thread, so as later crashes won't let that keep running
  - 25-06-2005 fixed: made mplayer set interlaced flag on mpeg2 video when decoding using libmpeg2
  - 25-06-2005 updated: ffmpeg to latest cvs as of now
  - 25-06-2005 added: [ 1236234 ] mplayer_GetAudioInfo returns wrong audio bitrate
  - 14-06-2005 added: readded a couple of other filters and fixed playback with noise filter
  - 14-06-2005 fixed: readded volume filter, was actually in use
  - 10-06-2005 fixed: playback using mplayer.dll without libavformat would never start, load of dll failed.